encapsulated cardTemplateMaker function at top, deckMaker function at bottom. created const gotCard, a reference for cardObjTemplate after it has been populated with child divs. The card flex-container div that should wrap the top-left, the-center, and bottom-right child divs does not yet have the child divs appended to it. Tried insertBefore, then appendChild onto, this wrap div, named it parentDiv. Next step is to fix this sub tree structure and also create and append suit and rank divs within top-left and bottom-right.

--- a/cards.css
+++ b/cards.css
@@ -24,7 +24,7 @@ ul  {
 	display: none;
 } */
 
-.card, #card-obj-1 {
+.card, #card-template {
 	display: flex;
 	margin: .15em;
 	-webkit-flex-flow: row nowrap;
